--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,10 +1,56 @@
 .formStyle{
 
-    margin-top: 12%;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    p {
+        font-family: 'Comic Sans MS';
+    }
+
     input{
+        opacity: 0;
+    }
+
+    label{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-family: 'Comic Sans MS';
+        font-size: 20px;
+
+        border-radius: 10px;
+        border-style: none;
+        width: 250px;
+        height: 150px;
+        margin-bottom: 2%;
+
+        background-color: #F1E0DD;
+        box-shadow: 0px 4px 4px rgba(58, 5, 55, 0.25);
+    }
+
+    label:hover{
+        background: pink;
+        cursor: pointer;
+
+    }
+
+    button{
+        font-family: 'Comic Sans MS';
+        font-size: 20px;
+        
+        border-radius: 10px;
+        border-style: none;
+        width: 250px;
+        height: 150px;
+
+        background-color: #F1E0DD;
+        box-shadow: 0px 4px 4px rgba(58, 5, 55, 0.25);
+    }
+    button:hover{
+        background: pink;
+        cursor: pointer;
     }
 }
